--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -1,4 +1,48 @@
+html{
+  font-size: 100%;
+
+  @media screen and (min-width: 700px){
+    font-size: 125%;
+  }
+}
+
 body{
-  font-family: "akzidenz-grotesk bq", cursive; // Cursive, so if it doesn't load, I KNOW.
-  line-height: 1.5;
+  @extend %serif;
+  font-size: 1rem;
+  line-height: 1.618;
+
+  @media screen and (min-width: 700px){
+    line-height: 1.5;
+  }
+}
+
+h1, h2, h3{
+  @extend %sans;
+  line-height: 1.35;
+  font-weight: 700;
+  margin-top: 1em;
+  margin-bottom: 4px;
+  & + p {
+    margin-top: 0;
+  }
+}
+
+h1{ font-size: 3.5em; }
+h2{ font-size: 1.5em; }
+h3{ font-size: 1em; }
+
+p{
+  &.lead{
+    @extend %sans;
+    font-weight: 500;
+  }
+}
+
+
+%sans, .sans{
+  font-family: "akzidenz-grotesk bq", cursive; // Cursive, so if it doesn't load, I'LL KNOW.
+}
+
+%serif, .serif{
+  font-family: "Adobe Garamond Pro", garamond, cursive;
 }
