--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -9,7 +9,7 @@ html{
 body{
   @extend %serif;
   font-size: 1rem;
-  line-height: 1.618;
+  line-height: $golden;
 
   @media screen and (min-width: 700px){
     line-height: 1.5;
@@ -31,6 +31,15 @@ h1{ font-size: 3.5em; }
 h2{ font-size: 1.5em; }
 h3{ font-size: 1em; }
 
+h4{
+  @extend %serif;
+  font-size: 0.75em;
+  font-style: italic;
+  color: $transparency;
+  border-bottom: 1px solid currentColor;
+  margin-top: 2em;
+}
+
 p{
   &.lead{
     @extend %sans;
@@ -38,6 +47,10 @@ p{
   }
 }
 
+.title{
+  color: $highlight;
+  text-transform: uppercase;
+}
 
 %sans, .sans{
   font-family: "akzidenz-grotesk bq", cursive; // Cursive, so if it doesn't load, I'LL KNOW.
