--- a/assets/scss/_logo.scss
+++ b/assets/scss/_logo.scss
@@ -5,17 +5,45 @@
   line-height: 1;
   letter-spacing: 0.5px;
 
+  @supports(position: sticky){
+    position: sticky;
+    top: 0;
+    z-index: 9;
+  }
+
+  font-size: 10px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: -7em;
+
+  @media screen and (min-width: 700px) {
+    padding-top: 3rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-bottom: -13em;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 0.75rem;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: -9em;
+    padding: 3rem 2rem 1rem 2rem;
+  }
+
   .wrapper{
     position: relative;
-    height: 4em;
-    width: 6em;
+    height: 2.6rem;
+    width: 2.6rem*$golden;
     display: inline-block;
   }
 
   span{
     display: block;
-    border: 0.25em solid $highlight;
-    padding: 0.25em;
+    border: 0.15rem solid $highlight;
+    padding: 0.1rem;
     height: inherit;
     width: inherit;
     position: absolute;
@@ -45,10 +73,4 @@
     }
   }
 
-  font-size: 10px;
-  padding: 2rem 1rem;
-  @media screen and (min-width: 700px) {
-    font-size: 12px;
-    padding: 2rem 1rem;
-  }
 }
