--- a/assets/scss/_swapper.scss
+++ b/assets/scss/_swapper.scss
@@ -21,7 +21,7 @@
       left: 0;
       bottom: 0;
       right: 0;
-      background: linear-gradient(to bottom, transparent 30%, #fff 90%);
+      background: linear-gradient(to bottom, transparent 30%, white 90%);
     }
   }
 
