--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,6 +12,7 @@
 @import "block";
 @import "grid";
 @import "number";
+@import "nav";
 
 // Utility
 @import "color";
@@ -19,6 +20,9 @@
 // Singletons
 @import "logo";
 @import "swapper";
+
+// Specifics
+@import "intro";
 
 // Shame
 @import "hacks";
