--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -12,6 +12,10 @@ html, body, script, main{
   &:before,
   &:after{
     box-sizing: inherit;
+    transition: color            300ms,
+                background-color 300ms,
+                transform        300ms,
+                opacity          300ms;
   }
 
   & + &{
