--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -14,8 +14,8 @@ html, body, script, main{
     box-sizing: inherit;
     transition: color            300ms,
                 background-color 300ms,
-                transform        300ms,
-                opacity          300ms;
+                opacity          300ms,
+                box-shadow       300ms;
   }
 
   & + &{
