save stuff for apple appt

--- a/assets/scss/_elements.scss
+++ b/assets/scss/_elements.scss
@@ -3,7 +3,15 @@ br{
 }
 
 figure{
+  width: 100%;
+  display: block;
   margin: 0;
+}
+
+figcaption{
+  :first-child{
+    margin-top: 0;
+  }
 }
 
 iframe, object, embed {
