--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -3,6 +3,11 @@ html{
   scroll-behavior: smooth;
 }
 
+body{
+  // overflow-y: hidden;
+  // overflow-x: auto;
+}
+
 html, body, script, main{
   margin: 0;
 }
