--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -80,9 +80,9 @@ a{
 }
 
 %sans, .sans{
-  font-family: "akzidenz-grotesk bq", cursive; // Cursive, so if it doesn't load, I'LL KNOW.
+  font-family: "AkzidGrtskNext-ExtraLight", "akzidenz-grotesk bq", helvetica; // Cursive, so if it doesn't load, I'LL KNOW.
 }
 
 %serif, .serif{
-  font-family: "Adobe Garamond Pro", garamond, cursive;
+  font-family: "Adobe Garamond Pro", garamond, georgia, serif;
 }
