--- a/assets/scss/_zigzag.scss
+++ b/assets/scss/_zigzag.scss
@@ -1,17 +1,15 @@
 // Makes an alternating layout
 .zigzag{
-  width: 100%;
   display: grid;
+  grid-auto-rows: minmax(30vh, auto);
   grid-row-gap: 2em;
 
-  @media screen and (min-width: 700px) {
-    // grid-template-rows: 40vh;
-
-    // Assumes the item only has two direct children
-    .zz-item{
-      width: 100%;
+  // Assumes the item only has two direct children
+  .zz-item{
+    margin: 0;
+    @media screen and (min-width: 700px) {
       display: grid;
-      grid-template-columns: repeat(2, calc(50% - 1em));
+      grid-template-columns: 1fr 1fr;
       grid-column-gap: 2em;
 
       > *{
@@ -25,6 +23,7 @@
         }
       }
     }
+
   }
   
 }
