--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -8,7 +8,7 @@
     margin: 0;
 
     + li{
-      border-top: 1px solid transparentize( $transparency, 0.25 );
+      border-top: 1px solid $transparency-light;
     }
   }
 
