--- a/assets/scss/_sections.scss
+++ b/assets/scss/_sections.scss
@@ -4,6 +4,7 @@
   padding-left: 1em;
   padding-right: 1em;
   padding-bottom: 1em;
+  position: relative;
 
   @media screen and (min-width: 700px) {
     padding-left: 2em;
@@ -13,8 +14,17 @@
   @media screen and (min-width: 1200px) {
     padding-left: 8rem;
     padding-right: 4rem;
-  }
 
+    &:before{
+      content: "";
+      width: 1px;
+      background: $transparency-light;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 6rem;
+    }
+  }
 }
 
 .section-header{
