style clients section

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,7 +10,7 @@
 // Components
 @import "sections";
 @import "block";
-@import "grid";
+@import "client";
 @import "number";
 @import "nav";
 @import "zigzag";
