abstract client-lists -> lists

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,7 +10,7 @@
 // Components
 @import "sections";
 @import "block";
-@import "client";
+@import "lists";
 @import "number";
 @import "nav";
 @import "zigzag";
