--- a/assets/scss/_lists.scss
+++ b/assets/scss/_lists.scss
@@ -1,11 +1,11 @@
-.client{
+li{
   margin: 0;
 
   :first-child{ margin-top:    0; }
   :last-child{ margin-bottom:  0; }
 }
 
-.client-grid {
+.grid-list {
   position: relative;
   display: grid;
   grid-gap: 1px;
@@ -37,7 +37,7 @@
   &:before{ left: 0; }
   &:after{ right: 0; }
 
-  .client{
+  li{
     padding: 2rem 1rem;
     background-color: $white;
     position: relative;
@@ -57,11 +57,11 @@
   }
 }
 
-.client-list{
+.comma-list{
   @extend %sans;
   line-height: 1.8;
 
-  .client{
+  li{
     display: inline-block;
 
     &:after{ color: $gray; }
