--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -32,7 +32,10 @@ h1, h2, h3{
   }
 }
 
-h1{ font-size: 3.5em; }
+h1{ 
+  margin-top: 1.5em;
+  font-size: 3.5em; 
+}
 h2{ font-size: 1.5em; }
 h3{ 
   font-size: 1em; 
