set up proper fonts

--- a/assets/scss/_lists.scss
+++ b/assets/scss/_lists.scss
@@ -100,7 +100,7 @@ li{
       height: 100%;
       margin-top: 0;
 
-      // font-family: ;
+      font-family: "ltc-bodoni-175", $sans;
       font-size: 4rem;
       color: $black;
 
