--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -23,5 +23,5 @@ $colors: (
 
 $golden: 1.618;
 
-$sans: "AkzidGrtskNext-ExtraLight", "akzidenz-grotesk bq", helvetica, sans-serif;
-$serif: "Adobe Garamond Pro", garamond, georgia, serif;
+$sans: 'akzidenz-grotesk', cursive, helvetica, sans-serif;
+$serif: "adobe-garamond-pro", cursive, "Adobe Garamond Pro", garamond, georgia, serif;
