--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -1,8 +1,8 @@
 $highlight: #f33;
 
 $black:     #000;
-$dark:      #7f7f7f;
-$gray:      #aaa;
+$dark:      #797979;
+$gray:      #d6d6d6;
 $light:     #f6f6f6;
 $white:     #fff;
 
