style h5, hr, alignment utilities

--- a/assets/scss/_elements.scss
+++ b/assets/scss/_elements.scss
@@ -2,6 +2,14 @@ br{
   margin: 0;
 }
 
+hr{
+  margin-top: 0;
+  margin-bottom: 1rem;
+  border: none;
+  height: 1rem;
+  box-shadow: inset 0 -1px 0 0px $transparency;
+}
+
 img{
   width: 100%;
   height: auto;
