--- a/assets/scss/_block.scss
+++ b/assets/scss/_block.scss
@@ -1,4 +1,4 @@
-.block{
+.block {
   display: block;
   padding-top:    1rem;
   padding-bottom: 1rem;
@@ -7,4 +7,7 @@
     padding-top:    2rem;
     padding-bottom: 2rem;
   }
+
+  :first-child { margin-top:    0; }
+  :last-child {  margin-bottom: 0; }
 }
