--- a/assets/scss/_intro.scss
+++ b/assets/scss/_intro.scss
@@ -1,4 +1,6 @@
-@media screen and (min-width: 1200px) {
-  .block, 
-  .nav a{ margin-left: 31.18%; }
+#intro{
+  @media screen and (min-width: 1200px) {
+    .block, 
+    .nav a{ margin-left: 31.18%; }
+  }
 }
