--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -77,6 +77,11 @@ p{
 a{
   text-decoration: none;
   color: inherit;
+
+  &:hover{
+    text-decoration: underline;
+    color: $highlight;
+  }
 }
 
 em{
