--- a/assets/scss/_elements.scss
+++ b/assets/scss/_elements.scss
@@ -13,6 +13,14 @@ hr{
 img{
   width: 100%;
   height: auto;
+
+  a &{
+    box-shadow: 0 0 0 5px transparent;
+
+    &:hover{
+      box-shadow: 0 0 0 5px $transparency;
+    }
+  }
 }
 
 figure{
