--- a/assets/scss/_zigzag.scss
+++ b/assets/scss/_zigzag.scss
@@ -11,6 +11,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-column-gap: 2em;
+      align-items: center;
 
       > *{
         margin: 0;
