--- a/assets/scss/_elements.scss
+++ b/assets/scss/_elements.scss
@@ -10,7 +10,7 @@ hr{
   margin-bottom: 1rem;
   border: none;
   height: 1rem;
-  box-shadow: inset 0 -1px 0 0px $transparency;
+  box-shadow: inset 0 -1px 0 0px $transparency-light;
 }
 
 img{
