--- a/assets/scss/_type.scss
+++ b/assets/scss/_type.scss
@@ -34,7 +34,14 @@ h1, h2, h3, h5{ // Skip H4
 
 h1{ 
   margin-top: 1.5em;
-  font-size: 3.5em; 
+  margin-bottom: 1rem;
+  line-height: 1;
+
+  font-size: 2em;
+
+  @media (min-width: 700px) {
+    font-size: 3.5em; 
+  } 
 }
 
 h2{ font-size: 1.5em; }
