--- a/assets/scss/_candidate.scss
+++ b/assets/scss/_candidate.scss
@@ -7,5 +7,9 @@
     background: $light;
     border-radius: 50%;
     transform: scale(0.8);
+
+    @media (min-width: 700px){
+      order: 2;
+    }
   }
 }
